# claude-notify-bot

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resource/: Protocol_Simple.md
src-tauri/src/: lib.rs  main.rs
src/components/ui/: Badge.vue  Button.vue  Card.vue  Switch.vue
src/components/ui/sidebar/: index.ts
src/components/ui/skeleton/: Skeleton.vue
src/components/ui/tooltip/: TooltipContent.vue
src/lib/: utils.ts
src/services/: bluetooth-api.ts  hook-installer-api.ts  valve-protocol-api.ts
src/stores/: bluetooth.ts
src/types/: bluetooth.ts  hooks.ts  valve.ts
