[package]
name = "claude-notify-bot"
version = "0.1.0"
description = "Claude Notify Bot"
authors = ["Claude Notify Bot Team"]
edition = "2021"

[lib]
name = "claude_notify_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
btleplug = "0.11"
tokio = { version = "1", features = ["time"] }
futures = "0.3"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
